--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5000
 server.error.include-stacktrace=never
 server.error.include-exception=false
-topsecretapi=https://api.appnoma.com/topSecret
+topsecretapi=https://api.appnoma.com/topsecret
 /*cloud.aws.region.static=us-east-1
 /*cloud.aws.region.auto=false
 /*cloud.aws.credentials.access-key=
